# agentmesh

./: .gitignore  CHANGELOG.md  Makefile  README.md  docker-compose.yml
.github/workflows/: ci.yml
docs/: ARCHITECTURE.md  architecture.md  dev-log-2026-07-17.md  dev-log-2026-07-20.md  dev-log-2026-07-21.md  dev-log-2026-07-22.md
executor/: Cargo.toml  Dockerfile
executor/src/: csv_ops.rs  lib.rs  main.rs  sandbox.rs  tokenizer.rs
gateway/: Dockerfile  go.mod  main.go
gateway/internal/config/: config.go
gateway/internal/hub/: hub.go  hub_test.go
gateway/internal/upstream/: upstream.go  upstream_test.go
intelligence/: Dockerfile  pyproject.toml
intelligence/agentmesh_intelligence/: __init__.py  cli.py  engine.py  executor_client.py  llm.py  models.py  rag.py  server.py  workflows.py
intelligence/tests/: test_engine.py
proto/: protocol.md
scripts/: verify.py
web/: package.json
web/app/: globals.css  layout.tsx  page.tsx
web/lib/: types.ts
