[package]
name = "agentmesh-executor"
version = "0.1.0"
edition = "2021"
description = "agentmesh execution & edge layer: sandboxed eval, fast tokenization, CSV aggregation"
license = "MIT"

[lib]
name = "agentmesh_executor"
path = "src/lib.rs"

[[bin]]
name = "agentmesh-executor"
path = "src/main.rs"

[dependencies]
axum = "0.7"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net", "time"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = "0.3"

[profile.release]
opt-level = 3
lto = true
