[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agentmesh-intelligence"
version = "0.1.0"
description = "agentmesh intelligence layer: LangGraph-style agent engine, RAG, and mock/real LLM providers"
requires-python = ">=3.10"
license = { text = "MIT" }
dependencies = []  # core engine is dependency-free and runs offline

[project.optional-dependencies]
server = ["fastapi>=0.110", "uvicorn[standard]>=0.29"]
http = ["httpx>=0.27"]          # to reach the Rust executor over the network
openai = ["openai>=1.30"]
anthropic = ["anthropic>=0.30"]
dev = ["pytest>=8.0", "pytest-asyncio>=0.23", "ruff>=0.5"]

[project.scripts]
agentmesh-intel = "agentmesh_intelligence.cli:main"

[tool.setuptools.packages.find]
include = ["agentmesh_intelligence*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
